Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Com Amor, LJ</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
+    <title>ComAmorLJ</title>
+    <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
 </head>
-<body>
+<body class="paravoce">
     <header>
-        <h1>Bem-vindo ao meu site!</h1>
-    </header>
+        <nav>
+            <a href="index.html">
+                <img src="img/logo.ico" 
+                height="50px">
 
+            </a>
+            <a href="page2.html">
+                <p>Quem somos</p>
+            </a>
+            <a href="page3.html">
+                <p>Tutoriais</p>
+            </a>
+            <a>
+                <a href="page4.html">
+                <p>Trabalho informal</p>
+            </a>
+
+        </nav>
+    </header>
 </body>
 </html>
