--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,19 +11,18 @@
     <header>
         <nav>
             <a href="index.html">
-                <img src="img/logo.ico" 
-                height="50px">
+                <p>para você</p>
 
             </a>
-            <a href="page2.html">
-                <p>Quem somos</p>
+            <a href="sabores.html">
+                <p>sabores da lara jean</p>
             </a>
-            <a href="page3.html">
-                <p>Tutoriais</p>
+            <a href="notas.html">
+                <p>notas do coração</p>
             </a>
             <a>
-                <a href="page4.html">
-                <p>Trabalho informal</p>
+                <a href="PS.html">
+                <p>P.S.: amei você</p>
             </a>
 
         </nav>
