--- a/PS.html
+++ b/PS.html
@@ -7,7 +7,7 @@
     <title>ComAmorLJ</title>
     <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
 </head>
-<body class="kk">
+<body class="minha div">
     <header>
         <nav>
             <a href="index.html">
@@ -27,5 +27,26 @@
 
         </nav>
     </header>
+<br><br><br>
+<p>
+        
+    Querido Leitor,
+    <br>
+
+    Eu sempre escrevo cartas. Não são cartas comuns, como aquelas de agradecimento ou felicitações, mas cartas cheias de sentimentos e pensamentos que eu nunca, jamais, enviaria. Acho que escrever é a minha maneira de lidar com as coisas. Quando as palavras estão dentro de mim, confusas e inquietas, eu as coloco no papel, e de alguma forma, isso me ajuda a entender o que estou sentindo.
+    <br>
+    Essas cartas não são para serem lidas. Elas são só para mim, para me permitir explorar meu coração sem medo. Eu nunca as envio, porque, se eu as enviasse, talvez as palavras perdessem seu poder. Elas são minha maneira de me proteger, de me expressar sem esperar nada em troca, sem precisar de respostas. Eu escrevo sobre o que sinto, sobre os meninos de quem gostei, sobre os momentos que vivi, sobre as coisas que gostaria de dizer, mas não tenho coragem.
+    <br>
+    Às vezes, sinto que, se eu enviasse uma dessas cartas, algo mudaria. Talvez eu tivesse que enfrentar uma realidade que não estou pronta para encarar. Ou talvez as palavras, que até então estavam sob o meu controle, tomassem uma forma diferente, se tornando mais reais, mais definitivas. E isso assusta um pouco. Por isso, elas ficam guardadas, em uma caixa secreta, onde podem ser lidas e relidas, mas nunca entregues a ninguém.
+    <br>
+    É engraçado como as cartas nos permitem ser vulneráveis sem realmente nos expor. Elas têm essa magia. Elas podem conter toda a nossa verdade, e ao mesmo tempo, podem ser algo apenas nosso. Quando escrevo, posso ser completamente honesta, sem me preocupar com o que os outros vão pensar ou com o impacto que minhas palavras podem ter. Eu escrevo para mim mesma, como uma forma de desabafar, de entender minhas emoções e encontrar um pouco de clareza no meio do caos.
+    <br>
+    No fundo, acho que as cartas são uma forma de amar sem exigir nada em troca. De compartilhar o que estamos sentindo de uma maneira que nos mantém seguros, mas também nos dá uma sensação de alívio. É como se, ao escrever, estivéssemos dizendo o que nunca conseguiríamos dizer de outra forma. E, no final, é suficiente.
+    <br>
+    Às vezes, tudo o que precisamos é escrever. Não importa se as palavras nunca saem do papel. O importante é o que elas significam para nós.
+    <br><br><br>
+    Com carinho,
+    Lara Jean </p>
+
 </body>
 </html>
