--- a/notas.html
+++ b/notas.html
@@ -7,7 +7,7 @@
     <title>ComAmorLJ</title>
     <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
 </head>
-<body class="kk">
+<body class="minha div">
     <header>
         <nav>
             <a href="index.html">
@@ -27,5 +27,26 @@
 
         </nav>
     </header>
+    <br><br><br>
+    <p style="color: black; font-family: Arial, Helvetica, sans-serif;">
+        
+        Se você já se imaginou no lugar da Lara Jean, seja escrevendo cartas secretas ou cozinhando na cozinha com uma xícara de chá ao lado, sabe que a trilha sonora perfeita pode transformar qualquer momento em algo ainda mais especial. Esta playlist foi criada para capturar a essência de Lara Jean — a doce mistura de romance, nostalgia e a beleza das pequenas coisas da vida. </p>
+        <br><br>
+        <p style="color: black; font-family: Arial, Helvetica, sans-serif;">
+        <h1>Internacionais</h1>
+    <li>You Belong With Me - Taylor Swift</li>
+    <li>Falling In Love at a Coffee Shop - Landon Pigg</li>
+    <li>Crush - Tessa Violet</li>
+    <li>I Will Follow You Into The Dark - Death Cab for Cutie</li>
+    </p>
+ <br><br>
+ <p style="color: black; font-family: Arial, Helvetica, sans-serif;">
+    <h1>Nacionais</h1>
+<li>Ainda Bem - Vanessa da Mata</li>
+<li>O Leãozinho - Caetano Veloso</li>
+<li>De Janeiro a Janeiro - Roberta Campos e Nando Rei</li>
+<li>Fica - Anavitoria ft. Matheus e Kauã</li>
+<li>Eternamente - Gal Costa</li>
+</p>
 </body>
 </html>
